--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal website",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.2",
+    "request": "^2.83.0"
   },
   "devDependencies": {},
   "scripts": {
