fix: removed non-free picture from repo

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 public/feed.json
 feed-builder/medium-access-token.js
 feed-builder/pocket-access-token.js
-
+public/webdev.jpg
 
 ### npm template
 node_modules
