feat: move config to external file

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 ### app-specific
 public/feed.json
-feed-builder/medium-access-token.js
-feed-builder/pocket-access-token.js
-feed-builder/instagram-access-token.js
+server-config.js
+
 
 public/webdev.jpg
 
