--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My personal website",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "gmail-send": "^1.2.11",
     "request": "^2.83.0",
     "rss-to-json": "^1.0.3"
   },
