--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.16.2",
     "gmail-send": "^1.2.11",
     "request": "^2.83.0",
-    "rss-to-json": "^1.0.3"
+    "rss-to-json": "^1.0.3",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {},
   "scripts": {
